--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Mtik_Billing
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6Su4gr2582reiD13HXXh3+3aBukwp0CkWwKVQSGfcCc=
 APP_DEBUG=true
-APP_URL=http://localhost/isp_billing
+APP_URL=http://localhost/mtik_billing
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=isp_billing
+DB_DATABASE=mtik_billing
 DB_USERNAME=dev
 DB_PASSWORD=dev
 
