Update .env, PrepaidController.php, and 20 more files...

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:6Su4gr2582reiD13HXXh3+3aBukwp0CkWwKVQSGfcCc=
 APP_DEBUG=true
 APP_URL=http://localhost/mtik_billing
+APP_VERSION=1.0.1
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
